--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+
+    <h1>Home</h1>
+    <p>This is a test version of my first app.</p>
+    <p>
+      To add a post click <a href=/posts/new> here </a>
+    </p>
